compile the services with java 11
Signed-off-by: Florian Fendt <Florian.Fendt@bosch-si.com>